@@ -1,3 +1,7 @@
+2007-03-14 9:15  nick
+
+	*libxfce4panel/Makefile.am: Try to fix bug 3002.
+
 2007-03-14 8:38   nick
 
 	* plugins/tasklist/tasklist.c: Fix bug 3011: expand setting not saved.
